--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,15 @@ future: true
 # Gems
 plugins:
   - jekyll-gist
-  - jekyll-paginate-v2
+  - jekyll-paginate
   - jekyll-seo-tag
 
-pagination:
-  enabled: true
-  per_page: 10
-  sort_reverse: true
+paginate: 10
+# for jekyll-paginate-v2
+# pagination:
+#   enabled: true
+#   per_page: 10
+#   sort_reverse: true
   
 # Optimize Jekyll
 exclude:
